[package]
name = "exprng"
version = "0.1.2"
authors = ["J/A <archer884@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
expr = { git = 'https://github.com/archer884/expr.git' }
hashbrown = "0.9.1"
rand = "0.8.3"
