[package]
name = "exprng"
version = "0.2.1"
authors = ["J/A <archer884@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
expr = { git = 'https://github.com/archer884/expr.git' }
hashbrown = "0.11.2"
rand = "0.8.3"
smallvec = "1.6.1"
